--- a/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
+++ b/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
@@ -50,6 +50,8 @@ To upload the {product-title} appliance file to Microsoft Azure, ensure the foll
 Azure requires that the uploaded Virtual Hard Disk (VHD) files are in a fixed format. The Azure Powershell script and Azure CLI do not automatically convert a dynamic .vhd file to fixed during upload. For {product-title_short} 4.5.2 and newer, the virtual appliance image files (`cfme-azure-5.8.2.0-1.x86_64.vhd` and newer) are available for download in a fixed format, and can be uploaded to an Azure environment and provisioned without requiring any additional manipulations with the image.   
 ====
 
+
+
 [[install-azure-cli]]
 ==== Install the Azure Command-Line Interface
 
@@ -94,11 +96,11 @@ To sign in, use a web browser to open the page https://aka.ms/devicelogin and en
 [
   {
     "cloudName": "AzureCloud",
-    "id": "528c646b-83jb-4527-1a04-10d294fd0cc2",
+    "id": "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx",
     "isDefault": true,
     "name": "Demo Azure account",
     "state": "Enabled",
-    "tenantId": "7e7cfe6b-cff0-e4d8-a446-57a76c9b4958",
+    "tenantId": "xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx",
     "user": {
       "name": "clouduser",
       "type": "user"
@@ -109,124 +111,10 @@ To sign in, use a web browser to open the page https://aka.ms/devicelogin and en
 +
 
 
-[[uploading-the-appliance-using-azure-powershell-script]]
-==== Uploading the {product-title_short} Virtual Appliance Using Azure Powershell Script
-
-[NOTE]
-====
-Make sure Azure Resource Manager cmdlets are available; see link:https://msdn.microsoft.com/en-us/library/mt125356.aspx[Azure Resource Manager Cmdlets] for the latest installation information.
-====
-
-. Log in to *Azure Resource Manager* using the cmdlet:
-+
-------
-## Customize for Your Environment
-$SubscriptionName = "my subscription"
-
-Login-AzureRmAccount
-Select-AzureRmSubscription -SubscriptionName $SubscriptionName
-------
-+  
-When prompted, enter your user name and password for the Azure Portal.
-
-. Upload the .vhd file to a storage account. As shown in the example script below, you will first create a *Resource Group* through the Portal UI or Powershell. Additionally, create the storage container defined in "BlobDestinationContainer" in advance.
-+
-------
-Example Script:
-
-## Customize for Your Environment
-$SubscriptionName = "my subscription"
-
-$ResourceGroupName = "test"
-$StorageAccountName = "test"
-
-$BlobNameSource = "cfme-test.vhd"
-$BlobSourceContainer = "templates"
-$LocalImagePath = "C:\tmp\$BlobNameSource"
-
-##
-
-# Upload VHD to a "templates" directory. You can pass a few arguments, such as `NumberOfUploaderThreads 8`. The default number of uploader threads is `8`. See https://msdn.microsoft.com/en-us/library/mt603554.aspx
-
-Add-AzureRmVhd -ResourceGroupName $ResourceGroupName -Destination https://$StorageAccountName.blob.core.windows.net/$BlobSourceContainer/$BlobNameSource -LocalFilePath $LocalImagePath -NumberOfUploaderThreads 8
-------
-+
-. Create a virtual machine. Then, define your VM and VHD name, your system/deployment name and size. Next, you will set the appropriate Storage, Network and Configuration options for your environment.
-+
-------
-Example Script:
-
-## Customize for Your Environment
-
-$BlobNameDest = "cfme-test.vhd"
-$BlobDestinationContainer = "vhds"
-$VMName = "cfme-test"
-$DeploySize= "Standard_A3"
-$vmUserName = "user1"
-
-$InterfaceName = "test-nic"
-$VNetName = "test-vnet"
-$PublicIPName = "test-public-ip"
-
-$SSHKey = <your ssh public key>
-
-##
-
-$StorageAccount = Get-AzureRmStorageAccount -ResourceGroup $ResourceGroupName -Name $StorageAccountName
-
-$SourceImageUri = "https://$StorageAccountName.blob.core.windows.net/templates/$BlobNameSource"
-$Location = $StorageAccount.Location
-$OSDiskName = $VMName
-
-# Network
-$Subnet1Name = "default"
-$VNetAddressPrefix = "10.1.0.0/16"
-$VNetSubnetAddressPrefix = "10.1.0.0/24"
-$PIp = New-AzureRmPublicIpAddress -Name $PublicIPName -ResourceGroupName $ResourceGroupName -Location $Location -AllocationMethod Dynamic -Force
-$SubnetConfig = New-AzureRmVirtualNetworkSubnetConfig -Name $Subnet1Name -AddressPrefix $VNetSubnetAddressPrefix
-$VNet = New-AzureRmVirtualNetwork -Name $VNetName -ResourceGroupName $ResourceGroupName -Location $Location -AddressPrefix $VNetAddressPrefix -Subnet $SubnetConfig -Force
-$Interface = New-AzureRmNetworkInterface -Name $InterfaceName -ResourceGroupName $ResourceGroupName -Location $Location -SubnetId $VNet.Subnets[0].Id -PublicIpAddressId $PIp.Id -Force
-
-# Specify the VM Name and Size
-$VirtualMachine = New-AzureRmVMConfig -VMName $VMName -VMSize $DeploySize
-
-# Add User
-$cred = Get-Credential -UserName $VMUserName -Message "Setting user credential - use blank password"
-$VirtualMachine = Set-AzureRmVMOperatingSystem -VM $VirtualMachine -Linux -ComputerName $VMName -Credential $cred
-
-# Add NIC
-$VirtualMachine = Add-AzureRmVMNetworkInterface -VM $VirtualMachine -Id $Interface.Id
-
-# Add Disk
-$OSDiskUri = $StorageAccount.PrimaryEndpoints.Blob.ToString() + $BlobDestinationContainer + "/" + $BlobNameDest
-
-$VirtualMachine = Set-AzureRmVMOSDisk -VM $VirtualMachine -Name $OSDiskName -VhdUri $OSDiskUri -CreateOption fromImage -SourceImageUri $SourceImageUri -Linux
-
-# Set SSH key
-Add-AzureRmVMSshPublicKey -VM $VirtualMachine -Path “/home/$VMUserName/.ssh/authorized_keys” -KeyData $SSHKey
-
-# Create the VM
-New-AzureRmVM -ResourceGroupName $ResourceGroupName -Location $Location -VM $VirtualMachine
-------
-+
-
-
-[NOTE]
-====
-These are the procedural steps as of the time of writing. For more information, see the following Azure documentation. 
-
-* https://azure.microsoft.com/en-us/documentation/articles/powershell-azure-resource-manager
-
-The steps covered in the following article are for a Windows machine, however, most of the items are common between Windows and Linux.
-
-* https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-windows-create-powershell
-====
-
-
 [[create-resources-for-appliance-in-azure]]
 ==== Create Resources for the Appliance in Microsoft Azure
 
-Complete the following steps to create resources in Microsoft Azure. Note than if you already have resources you can use, you can skip this section and go directly to either xref:uploading-the-appliance-using-azure-powershell-script[] or xref:uploading-the-appliance-using-azure-cli[] depending on your preferred method for uploading the {product-title_short} appliance to Azure.
+Complete the following steps to create resources in Microsoft Azure. Note that if you already have resources you can use, you can skip this section and go directly to either xref:uploading-the-appliance-using-azure-powershell-script[] or xref:uploading-the-appliance-using-azure-cli[] depending on your preferred method for uploading the {product-title_short} appliance to Azure.
 
 [NOTE]
 ====
@@ -378,6 +266,120 @@ Example:
 +
 
 
+[[uploading-the-appliance-using-azure-powershell-script]]
+==== Uploading the {product-title_short} Virtual Appliance Using Azure Powershell Script
+
+[NOTE]
+====
+Make sure Azure Resource Manager cmdlets are available; see link:https://msdn.microsoft.com/en-us/library/mt125356.aspx[Azure Resource Manager Cmdlets] for the latest installation information.
+====
+
+. Log in to *Azure Resource Manager* using the cmdlet:
++
+------
+## Customize for Your Environment
+$SubscriptionName = "my subscription"
+
+Login-AzureRmAccount
+Select-AzureRmSubscription -SubscriptionName $SubscriptionName
+------
++  
+When prompted, enter your user name and password for the Azure Portal.
+
+. Upload the .vhd file to a storage account. As shown in the example script below, you will first create a *Resource Group* through the Portal UI or Powershell. Additionally, create the storage container defined in "BlobDestinationContainer" in advance.
++
+------
+Example Script:
+
+## Customize for Your Environment
+$SubscriptionName = "my subscription"
+
+$ResourceGroupName = "test"
+$StorageAccountName = "test"
+
+$BlobNameSource = "cfme-test.vhd"
+$BlobSourceContainer = "templates"
+$LocalImagePath = "C:\tmp\$BlobNameSource"
+
+##
+
+# Upload VHD to a "templates" directory. You can pass a few arguments, such as `NumberOfUploaderThreads 8`. The default number of uploader threads is `8`. See https://msdn.microsoft.com/en-us/library/mt603554.aspx
+
+Add-AzureRmVhd -ResourceGroupName $ResourceGroupName -Destination https://$StorageAccountName.blob.core.windows.net/$BlobSourceContainer/$BlobNameSource -LocalFilePath $LocalImagePath -NumberOfUploaderThreads 8
+------
++
+. Create a virtual machine. Then, define your VM and VHD name, your system/deployment name and size. Next, you will set the appropriate Storage, Network and Configuration options for your environment.
++
+------
+Example Script:
+
+## Customize for Your Environment
+
+$BlobNameDest = "cfme-test.vhd"
+$BlobDestinationContainer = "vhds"
+$VMName = "cfme-test"
+$DeploySize= "Standard_A3"
+$vmUserName = "user1"
+
+$InterfaceName = "test-nic"
+$VNetName = "test-vnet"
+$PublicIPName = "test-public-ip"
+
+$SSHKey = <your ssh public key>
+
+##
+
+$StorageAccount = Get-AzureRmStorageAccount -ResourceGroup $ResourceGroupName -Name $StorageAccountName
+
+$SourceImageUri = "https://$StorageAccountName.blob.core.windows.net/templates/$BlobNameSource"
+$Location = $StorageAccount.Location
+$OSDiskName = $VMName
+
+# Network
+$Subnet1Name = "default"
+$VNetAddressPrefix = "10.1.0.0/16"
+$VNetSubnetAddressPrefix = "10.1.0.0/24"
+$PIp = New-AzureRmPublicIpAddress -Name $PublicIPName -ResourceGroupName $ResourceGroupName -Location $Location -AllocationMethod Dynamic -Force
+$SubnetConfig = New-AzureRmVirtualNetworkSubnetConfig -Name $Subnet1Name -AddressPrefix $VNetSubnetAddressPrefix
+$VNet = New-AzureRmVirtualNetwork -Name $VNetName -ResourceGroupName $ResourceGroupName -Location $Location -AddressPrefix $VNetAddressPrefix -Subnet $SubnetConfig -Force
+$Interface = New-AzureRmNetworkInterface -Name $InterfaceName -ResourceGroupName $ResourceGroupName -Location $Location -SubnetId $VNet.Subnets[0].Id -PublicIpAddressId $PIp.Id -Force
+
+# Specify the VM Name and Size
+$VirtualMachine = New-AzureRmVMConfig -VMName $VMName -VMSize $DeploySize
+
+# Add User
+$cred = Get-Credential -UserName $VMUserName -Message "Setting user credential - use blank password"
+$VirtualMachine = Set-AzureRmVMOperatingSystem -VM $VirtualMachine -Linux -ComputerName $VMName -Credential $cred
+
+# Add NIC
+$VirtualMachine = Add-AzureRmVMNetworkInterface -VM $VirtualMachine -Id $Interface.Id
+
+# Add Disk
+$OSDiskUri = $StorageAccount.PrimaryEndpoints.Blob.ToString() + $BlobDestinationContainer + "/" + $BlobNameDest
+
+$VirtualMachine = Set-AzureRmVMOSDisk -VM $VirtualMachine -Name $OSDiskName -VhdUri $OSDiskUri -CreateOption fromImage -SourceImageUri $SourceImageUri -Linux
+
+# Set SSH key
+Add-AzureRmVMSshPublicKey -VM $VirtualMachine -Path “/home/$VMUserName/.ssh/authorized_keys” -KeyData $SSHKey
+
+# Create the VM
+New-AzureRmVM -ResourceGroupName $ResourceGroupName -Location $Location -VM $VirtualMachine
+------
++
+
+
+[NOTE]
+====
+These are the procedural steps as of the time of writing. For more information, see the following Azure documentation. 
+
+* https://azure.microsoft.com/en-us/documentation/articles/powershell-azure-resource-manager
+
+The steps covered in the following article are for a Windows machine, however, most of the items are common between Windows and Linux.
+
+* https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-windows-create-powershell
+====
+
+
 [[uploading-the-appliance-using-azure-cli]]
 ==== Uploading and Provisioning the {product-title_short} Virtual Appliance Using Azure Command-Line Interface
 
@@ -488,6 +490,14 @@ $ export AZURE_STORAGE_CONNECTION_STRING="DefaultEndpointsProtocol=https;Endpoin
 ----
 +
 ====
+
+.Possible Next Steps:
+
+* You will need to create a data disk for the database; see link:https://docs.microsoft.com/en-us/azure/virtual-machines/linux/add-disk[] for information about how to add a persistent disk to store your data. 
+
+* See link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/deployment_planning_guide/#database-requirements[] for database requirements guidelines.
+
+* For information about Azure ports used by {product-title}, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/appliance_hardening_guide/#chap_red_hat_cloudforms_security_guide_firewall[].
 
 
 [IMPORTANT]
