--- a/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
+++ b/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
@@ -33,10 +33,10 @@ endif::cfme[]
 [[uploading-the-appliance-to-microsoft-azure]]
 === Uploading and Provisioning the {product-title} Virtual Appliance in Microsoft Azure
 
-You can upload and provision the appliance in an Azure environment using the following two methods. 
+You can upload and provision the appliance in an Azure environment using the following two methods: 
 
-* Using Azure PowerShell script
-* Using Azure Command-Line Interface (Azure CLI)
+* Using the Azure PowerShell script
+* Using the Azure Command-Line Interface (Azure CLI)
 
 To upload the {product-title} appliance file in Microsoft Azure, ensure the following requirements are met:
 
@@ -48,18 +48,196 @@ To upload the {product-title} appliance file in Microsoft Azure, ensure the foll
 
 [IMPORTANT]
 ====
-Azure requires that the uploaded Virtual Hard Disk (VHD) files are in a fixed format. The Azure Powershell script and Azure CLI do not automatically convert a dynamic .vhd file to fixed during upload. For {product-title_short} 4.5.2 and newer, the virtual appliance image files (`cfme-azure-5.8.2.3-1.x86_64.vhd` and newer) are available for download in a fixed format and therefore can be uploaded and provisioned in an Azure environment without requiring any additional manipulations with the image.   
+Azure requires that the uploaded Virtual Hard Disk (VHD) files are in a fixed format. The Azure PowerShell script and Azure CLI do not automatically convert a dynamic .vhd file to fixed during upload. For {product-title_short} 4.5.2 and newer, the virtual appliance image files (`cfme-azure-5.8.2.3-1.x86_64.vhd` and newer) are available for download in a fixed format and therefore can be uploaded and provisioned in an Azure environment without requiring any additional manipulations with the image.   
 ====
 
 
-[[create-resources-for-appliance-in-azure]]
-==== Create Resources for the Appliance in Microsoft Azure
+[[uploading-the-appliance-using-azure-powershell-script]]
+==== Using the Azure PowerShell Script
 
-Complete the following steps to create resources in Microsoft Azure. Note that if you already have resources you can use, you can skip this section and go directly to either xref:uploading-the-appliance-using-azure-powershell-script[] or xref:uploading-the-appliance-using-azure-cli[] depending on your preferred method for uploading the {product-title_short} appliance in Azure.
+[NOTE]
+====
+Make sure Azure Resource Manager cmdlets are available; see link:https://msdn.microsoft.com/en-us/library/mt125356.aspx[Azure Resource Manager Cmdlets] for the latest installation information.
+====
+
+. Log in to *Azure Resource Manager* using the cmdlet:
++
+------
+## Customize for Your Environment
+$SubscriptionName = "my subscription"
+
+Login-AzureRmAccount
+Select-AzureRmSubscription -SubscriptionName $SubscriptionName
+------
++  
+When prompted, enter your user name and password for the Azure Portal.
+
+. Upload the .vhd file to a storage account. As shown in the example script below, you will first create a *Resource Group* through the Portal UI or PowerShell. Additionally, create the storage container defined in "BlobDestinationContainer" in advance.
++
+------
+Example Script:
+
+## Customize for Your Environment
+$SubscriptionName = "my subscription"
+
+$ResourceGroupName = "test"
+$StorageAccountName = "test"
+
+$BlobNameSource = "cfme-test.vhd"
+$BlobSourceContainer = "templates"
+$LocalImagePath = "C:\tmp\$BlobNameSource"
+
+##
+
+# Upload VHD to a "templates" directory. You can pass a few arguments, such as `NumberOfUploaderThreads 8`. The default number of uploader threads is `8`. See https://msdn.microsoft.com/en-us/library/mt603554.aspx
+
+Add-AzureRmVhd -ResourceGroupName $ResourceGroupName -Destination https://$StorageAccountName.blob.core.windows.net/$BlobSourceContainer/$BlobNameSource -LocalFilePath $LocalImagePath -NumberOfUploaderThreads 8
+------
++
+. Create a virtual machine. Then, define your VM and VHD name, your system/deployment name and size. Next, you will set the appropriate Storage, Network and Configuration options for your environment.
++
+------
+Example Script:
+
+## Customize for Your Environment
+
+$BlobNameDest = "cfme-test.vhd"
+$BlobDestinationContainer = "vhds"
+$VMName = "cfme-test"
+$DeploySize= "Standard_A3"
+$vmUserName = "user1"
+
+$InterfaceName = "test-nic"
+$VNetName = "test-vnet"
+$PublicIPName = "test-public-ip"
+
+$SSHKey = <your ssh public key>
+
+##
+
+$StorageAccount = Get-AzureRmStorageAccount -ResourceGroup $ResourceGroupName -Name $StorageAccountName
+
+$SourceImageUri = "https://$StorageAccountName.blob.core.windows.net/templates/$BlobNameSource"
+$Location = $StorageAccount.Location
+$OSDiskName = $VMName
+
+# Network
+$Subnet1Name = "default"
+$VNetAddressPrefix = "10.1.0.0/16"
+$VNetSubnetAddressPrefix = "10.1.0.0/24"
+$PIp = New-AzureRmPublicIpAddress -Name $PublicIPName -ResourceGroupName $ResourceGroupName -Location $Location -AllocationMethod Dynamic -Force
+$SubnetConfig = New-AzureRmVirtualNetworkSubnetConfig -Name $Subnet1Name -AddressPrefix $VNetSubnetAddressPrefix
+$VNet = New-AzureRmVirtualNetwork -Name $VNetName -ResourceGroupName $ResourceGroupName -Location $Location -AddressPrefix $VNetAddressPrefix -Subnet $SubnetConfig -Force
+$Interface = New-AzureRmNetworkInterface -Name $InterfaceName -ResourceGroupName $ResourceGroupName -Location $Location -SubnetId $VNet.Subnets[0].Id -PublicIpAddressId $PIp.Id -Force
+
+# Specify the VM Name and Size
+$VirtualMachine = New-AzureRmVMConfig -VMName $VMName -VMSize $DeploySize
+
+# Add User
+$cred = Get-Credential -UserName $VMUserName -Message "Setting user credential - use blank password"
+$VirtualMachine = Set-AzureRmVMOperatingSystem -VM $VirtualMachine -Linux -ComputerName $VMName -Credential $cred
+
+# Add NIC
+$VirtualMachine = Add-AzureRmVMNetworkInterface -VM $VirtualMachine -Id $Interface.Id
+
+# Add Disk
+$OSDiskUri = $StorageAccount.PrimaryEndpoints.Blob.ToString() + $BlobDestinationContainer + "/" + $BlobNameDest
+
+$VirtualMachine = Set-AzureRmVMOSDisk -VM $VirtualMachine -Name $OSDiskName -VhdUri $OSDiskUri -CreateOption fromImage -SourceImageUri $SourceImageUri -Linux
+
+# Set SSH key
+Add-AzureRmVMSshPublicKey -VM $VirtualMachine -Path “/home/$VMUserName/.ssh/authorized_keys” -KeyData $SSHKey
+
+# Create the VM
+New-AzureRmVM -ResourceGroupName $ResourceGroupName -Location $Location -VM $VirtualMachine
+------
++
+
+[NOTE]
+====
+These are the procedural steps as of the time of writing. For more information, see the following Azure documentation. 
+
+* https://azure.microsoft.com/en-us/documentation/articles/powershell-azure-resource-manager
+
+The steps covered in the following article are for a Windows machine, however, most of the items are common between Windows and Linux.
+
+* https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-windows-create-powershell
+====
+
+
+[[uploading-the-appliance-using-azure-cli]]
+==== Using the Azure Command-Line Interface
+
+Complete the following steps to upload and provision the {product-title_short} virtual appliance using the Azure CLI.
+
+[[installing-azure-cli]]
+===== Installing the Azure Command-Line Interface
 
 [NOTE]
 ====
 For a complete Azure CLI 2.0 command reference, see link:https://docs.microsoft.com/en-us/cli/azure/?view=azure-cli-latest[Azure CLI 2.0: Command reference - az].
+====
+
+. Import the Microsoft repository key. 
++
+----
+$ sudo rpm --import https://packages.microsoft.com/keys/microsoft.asc
+----
++
+. Create a local Azure CLI repository entry.
++
+----
+$ sudo sh -c 'echo -e "[azure-cli]\nname=Azure CLI\nbaseurl=https://packages.microsoft.com/yumrepos/azure-cli\nenabled=1\ngpgcheck=1\ngpgkey=https://packages.microsoft.com/keys/microsoft.asc" > /etc/yum.repos.d/azure-cli.repo'
+----
++
+. Update the yum package index.
++
+----
+$ yum check-update
+----
++
+. Install the Azure CLI.
++
+----
+$ sudo yum install azure-cli
+----
++
+. Log in to Azure.
++
+----
+$ az login
+
+Example:
+
+To sign in, use a web browser to open the page https://aka.ms/devicelogin and enter the code GJP8Y33XY to authenticate.
+
+[
+  {
+    "cloudName": "AzureCloud",
+    "id": "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx",
+    "isDefault": true,
+    "name": "Demo Azure account",
+    "state": "Enabled",
+    "tenantId": "xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx",
+    "user": {
+      "name": "clouduser",
+      "type": "user"
+    }
+  }
+]
+----
++
+
+
+[[creating-resources-in-azure-cli]]
+===== Creating Resources for the Appliance in Microsoft Azure Using the Azure Command-Line Interface
+
+Complete the following steps to create resources in Microsoft Azure using the Azure CLI. 
+
+[NOTE]
+====
+* If you already have resources you can use, you can skip this section and go directly to xref:uploading-provisioning-appliance-using-azure-cli[].
+* For a complete Azure CLI 2.0 command reference, see link:https://docs.microsoft.com/en-us/cli/azure/?view=azure-cli-latest[Azure CLI 2.0: Command reference - az].
 ====
 
 . Create a resource group in an Azure region.
@@ -207,182 +385,8 @@ Example:
 +
 
 
-[[uploading-the-appliance-using-azure-powershell-script]]
-==== Uploading the {product-title_short} Virtual Appliance Using Azure Powershell Script
-
-[NOTE]
-====
-Make sure Azure Resource Manager cmdlets are available; see link:https://msdn.microsoft.com/en-us/library/mt125356.aspx[Azure Resource Manager Cmdlets] for the latest installation information.
-====
-
-. Log in to *Azure Resource Manager* using the cmdlet:
-+
-------
-## Customize for Your Environment
-$SubscriptionName = "my subscription"
-
-Login-AzureRmAccount
-Select-AzureRmSubscription -SubscriptionName $SubscriptionName
-------
-+  
-When prompted, enter your user name and password for the Azure Portal.
-
-. Upload the .vhd file to a storage account. As shown in the example script below, you will first create a *Resource Group* through the Portal UI or Powershell. Additionally, create the storage container defined in "BlobDestinationContainer" in advance.
-+
-------
-Example Script:
-
-## Customize for Your Environment
-$SubscriptionName = "my subscription"
-
-$ResourceGroupName = "test"
-$StorageAccountName = "test"
-
-$BlobNameSource = "cfme-test.vhd"
-$BlobSourceContainer = "templates"
-$LocalImagePath = "C:\tmp\$BlobNameSource"
-
-##
-
-# Upload VHD to a "templates" directory. You can pass a few arguments, such as `NumberOfUploaderThreads 8`. The default number of uploader threads is `8`. See https://msdn.microsoft.com/en-us/library/mt603554.aspx
-
-Add-AzureRmVhd -ResourceGroupName $ResourceGroupName -Destination https://$StorageAccountName.blob.core.windows.net/$BlobSourceContainer/$BlobNameSource -LocalFilePath $LocalImagePath -NumberOfUploaderThreads 8
-------
-+
-. Create a virtual machine. Then, define your VM and VHD name, your system/deployment name and size. Next, you will set the appropriate Storage, Network and Configuration options for your environment.
-+
-------
-Example Script:
-
-## Customize for Your Environment
-
-$BlobNameDest = "cfme-test.vhd"
-$BlobDestinationContainer = "vhds"
-$VMName = "cfme-test"
-$DeploySize= "Standard_A3"
-$vmUserName = "user1"
-
-$InterfaceName = "test-nic"
-$VNetName = "test-vnet"
-$PublicIPName = "test-public-ip"
-
-$SSHKey = <your ssh public key>
-
-##
-
-$StorageAccount = Get-AzureRmStorageAccount -ResourceGroup $ResourceGroupName -Name $StorageAccountName
-
-$SourceImageUri = "https://$StorageAccountName.blob.core.windows.net/templates/$BlobNameSource"
-$Location = $StorageAccount.Location
-$OSDiskName = $VMName
-
-# Network
-$Subnet1Name = "default"
-$VNetAddressPrefix = "10.1.0.0/16"
-$VNetSubnetAddressPrefix = "10.1.0.0/24"
-$PIp = New-AzureRmPublicIpAddress -Name $PublicIPName -ResourceGroupName $ResourceGroupName -Location $Location -AllocationMethod Dynamic -Force
-$SubnetConfig = New-AzureRmVirtualNetworkSubnetConfig -Name $Subnet1Name -AddressPrefix $VNetSubnetAddressPrefix
-$VNet = New-AzureRmVirtualNetwork -Name $VNetName -ResourceGroupName $ResourceGroupName -Location $Location -AddressPrefix $VNetAddressPrefix -Subnet $SubnetConfig -Force
-$Interface = New-AzureRmNetworkInterface -Name $InterfaceName -ResourceGroupName $ResourceGroupName -Location $Location -SubnetId $VNet.Subnets[0].Id -PublicIpAddressId $PIp.Id -Force
-
-# Specify the VM Name and Size
-$VirtualMachine = New-AzureRmVMConfig -VMName $VMName -VMSize $DeploySize
-
-# Add User
-$cred = Get-Credential -UserName $VMUserName -Message "Setting user credential - use blank password"
-$VirtualMachine = Set-AzureRmVMOperatingSystem -VM $VirtualMachine -Linux -ComputerName $VMName -Credential $cred
-
-# Add NIC
-$VirtualMachine = Add-AzureRmVMNetworkInterface -VM $VirtualMachine -Id $Interface.Id
-
-# Add Disk
-$OSDiskUri = $StorageAccount.PrimaryEndpoints.Blob.ToString() + $BlobDestinationContainer + "/" + $BlobNameDest
-
-$VirtualMachine = Set-AzureRmVMOSDisk -VM $VirtualMachine -Name $OSDiskName -VhdUri $OSDiskUri -CreateOption fromImage -SourceImageUri $SourceImageUri -Linux
-
-# Set SSH key
-Add-AzureRmVMSshPublicKey -VM $VirtualMachine -Path “/home/$VMUserName/.ssh/authorized_keys” -KeyData $SSHKey
-
-# Create the VM
-New-AzureRmVM -ResourceGroupName $ResourceGroupName -Location $Location -VM $VirtualMachine
-------
-+
-
-[NOTE]
-====
-These are the procedural steps as of the time of writing. For more information, see the following Azure documentation. 
-
-* https://azure.microsoft.com/en-us/documentation/articles/powershell-azure-resource-manager
-
-The steps covered in the following article are for a Windows machine, however, most of the items are common between Windows and Linux.
-
-* https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-windows-create-powershell
-====
-
-
-[[uploading-the-appliance-using-azure-cli]]
-==== Uploading and Provisioning the {product-title_short} Virtual Appliance Using Azure Command-Line Interface
-
-
-.Install the Azure Command-Line Interface
-
-[NOTE]
-====
-For a complete Azure CLI 2.0 command reference, see link:https://docs.microsoft.com/en-us/cli/azure/?view=azure-cli-latest[Azure CLI 2.0: Command reference - az].
-====
-
-. Import the Microsoft repository key. 
-+
-----
-$ sudo rpm --import https://packages.microsoft.com/keys/microsoft.asc
-----
-+
-. Create a local Azure CLI repository entry.
-+
-----
-$ sudo sh -c 'echo -e "[azure-cli]\nname=Azure CLI\nbaseurl=https://packages.microsoft.com/yumrepos/azure-cli\nenabled=1\ngpgcheck=1\ngpgkey=https://packages.microsoft.com/keys/microsoft.asc" > /etc/yum.repos.d/azure-cli.repo'
-----
-+
-. Update the yum package index.
-+
-----
-$ yum check-update
-----
-+
-. Install the Azure CLI.
-+
-----
-$ sudo yum install azure-cli
-----
-+
-. Log in to Azure.
-+
-----
-$ az login
-
-Example:
-
-To sign in, use a web browser to open the page https://aka.ms/devicelogin and enter the code GJP8Y33XY to authenticate.
-
-[
-  {
-    "cloudName": "AzureCloud",
-    "id": "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx",
-    "isDefault": true,
-    "name": "Demo Azure account",
-    "state": "Enabled",
-    "tenantId": "xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx",
-    "user": {
-      "name": "clouduser",
-      "type": "user"
-    }
-  }
-]
-----
-+
-
-
-.Upload and Provision the {product-title_short} Virtual Appliance Using Azure Command-Line Interface
+[[uploading-provisioning-appliance-using-azure-cli]]
+===== Uploading and Provisioning the {product-title_short} Virtual Appliance Using the Azure Command-Line Interface
 
 You can now upload and provision the appliance in an Azure environment using the Azure Command-Line Interface (Azure CLI).
 
@@ -499,12 +503,12 @@ $ export AZURE_STORAGE_CONNECTION_STRING="DefaultEndpointsProtocol=https;Endpoin
 
 * See link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/deployment_planning_guide/#database-requirements[Database Requirements] for some general guidelines for your database requirements.
 
-* For information about Azure ports used by {product-title}, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/appliance_hardening_guide/#chap_red_hat_cloudforms_security_guide_firewall[].
+* For information about Azure ports used by {product-title_short}, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/appliance_hardening_guide/#chap_red_hat_cloudforms_security_guide_firewall[].
 
 
 [IMPORTANT]
 ====
-After uploading the {product-title} appliance, you must configure the database for {product-title}; see xref:configuring_a_database[Configuring a Database for {product-title}].
+After uploading the {product-title} appliance, you must configure the database for {product-title_short}; see xref:configuring_a_database[Configuring a Database for {product-title}].
 ====
 
 
