conditionalize configuration file so that database config only appears in CFME docs

--- a/common/configuration.adoc
+++ b/common/configuration.adoc
@@ -33,9 +33,9 @@ The {product-title} appliance console automatically logs out after five minutes 
 
 [[advanced-configuration-settings]]
 === Advanced Configuration Settings
-
 include::configuration-advanced.adoc[]
 
+ifdef::cfme[]
 [[configuring_a_database]]
 === Configuring a Database for {product-title}
 
@@ -92,6 +92,7 @@ All {product-title_short} appliances in a multi-region deployment must use the s
 . Confirm the configuration if prompted.
 
 {product-title} will then configure the external database.
+endif::cfme[]
 
 [[configuring-a-worker-appliance]]
 === Configuring a Worker Appliance
