--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Retirement.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Retirement.adoc
@@ -21,7 +21,7 @@ There are three built-in policies involved with retirement:
 * When creating a provision request, a retirement date can be set up.
 
 [[using-the-console-to-retire]]
-==== Using the Console to Retire
+==== Using the Console to Retire a Virtual Machine
 
 Through the {product-title} console, you can retire a virtual machine on a specific date or immediately.
 
@@ -37,19 +37,22 @@ The virtual machine or instance is immediately stopped, and will be shut down if
 [[setting-a-retirement-date-for-a-virtual-machine-or-instance]]
 ==== Setting a Retirement Date and Time for a Virtual Machine or Instance
 
+You can schedule virtual machine retirement by specifying a date and time, or by selecting a relative time a number of months, weeks, days or hours ahead of the present time.
+
 . Navigate to menu:Services[Workloads].
 . Select the virtual machine or instance that you want to set a retirement date for.
 . Click image:2007.png[](*Lifecycle*), then image:2010.png[](*Set Retirement Dates*).
-. From the *Enter Retirement Date as* list, select *Specific Date and Time* or *Time Delay from Now* to specify a retirement time.
-. To choose a *Specific Date and Time*, click the *Retirement Date and Time* field to open the calendar.
-.. Select a retirement date using the calendar control.
-.. Click image:clock.png[], then select a retirement time (in UTC) using the arrows.
-. To retire the virtual machine using a relative time, select *Time Delay from Now*. 
-.. From *Time Delay*, specify a number of months, weeks, days or hours in the future using the arrows to set a retirement time.
+. From *Enter Retirement Date as*, select *Specific Date and Time* or *Time Delay from Now* to schedule retirement.
+.. To choose a *Specific Date and Time*, click the *Retirement Date and Time* field to open the calendar.
+... Select a retirement date using the calendar control.
+... Click image:clock.png[] then select a retirement time (in UTC) using the arrows.
+.. To retire the virtual machine using a relative time, select *Time Delay from Now*.
+... From *Time Delay*, specify a retirement time any number of months, weeks, days, or hours in the future using the arrows.
 . Select a *Retirement Warning* if desired.
 . Click *Save*.
 
-The retirement date and time are set, and display in the virtual machine or instance summary screen.
+The scheduled retirement date and time display in the virtual machine summary screen.
+
 
 [[removing-a-retirement-date-for-a-virtual-machine-or-instance]]
 ==== Removing a Retirement Date for a Virtual Machine or Instance
